improvements & hacks in cfg4j to make in work with nested configurations

--- a/src/main/resources/sql.yaml
+++ b/src/main/resources/sql.yaml
@@ -1,4 +1,14 @@
 SqlInput:
   dataSources:
-    - url: jdbc:h2:mem
-      name: TEST1
+    - name: TEST1
+      url: jdbc:h2:mem1
+    - name: TEST2
+      url: jdbc:h2:mem2
+
+dataSource:
+  name: TEST3
+  url: jdbc:h2:mem3
+
+toto:
+  - titi
+  - tata
