--- a/pom.xml
+++ b/pom.xml
@@ -46,5 +46,11 @@
 			<artifactId>cfg4j-core</artifactId>
 			<version>4.4.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>19.0</version>
+		</dependency>
 	</dependencies>
 </project>
